--- a/checkout_page.ui
+++ b/checkout_page.ui
@@ -19,7 +19,44 @@
      <widget class="QWidget" name="pageCartView">
       <layout class="QVBoxLayout" name="cartLayout">
        <item>
-        <widget class="QTableWidget" name="cartTable"/>
+        <widget class="QTableWidget" name="cartTable">
+         <property name="columnCount">
+          <number>6</number>
+         </property>
+         <property name="rowCount">
+          <number>0</number>
+         </property>
+         <column>
+          <property name="text">
+           <string>Item Name</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Price (Rs.)</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Quantity</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Subtotal (Rs.)</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Decrease (-)</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Remove</string>
+          </property>
+         </column>
+        </widget>
        </item>
        <item>
         <widget class="QLabel" name="labelBill">
